Revert "featured post text overflow issue"
This reverts commit 01cf1d74863aeae8dff5a6b1d193bca3e0f98491.

--- a/style.css
+++ b/style.css
@@ -326,21 +326,14 @@ input:focus {
     bottom: 72px;
     left: 25px;
     margin: 0;
-    height: auto;
-    max-height: 60px;
+    height: 20px;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
     max-width: 90%;
     position: relative;
     user-select: none;
-    line-height: 1.3;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    word-wrap: break-word;
 }
 
 .comfort {
@@ -1468,19 +1461,15 @@ table tr:hover {
 }
 
 .sony-tv {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 700;
-    line-height: 1.3;
+    line-height: 17px;
     margin: 0px 0 0px 0px;
-    padding: 5px 2px;
+    padding: 0px 0 5px 2px;
     text-decoration: none;
+    padding: 10px 0 0;
     border: none;
     width: 100%;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    word-wrap: break-word;
 }
 
 
